Adicionando ultima parte ex 2 bloco 3

--- a/fundamentos/bloco-03/index.html
+++ b/fundamentos/bloco-03/index.html
@@ -18,7 +18,7 @@
 <li><a href="#sidney">Sidney de Oliveira</a></li>
 <li><a href="#ricardo">Ricardo Sbeghen</a></li>
 </ul>
-<br>
+<h4><a href="http://www.google.com" target="_blank">Fernanda Vidal</a></h4>
 <img src="filho.png" width="300px">
 <br>
 <p id="julia">Júlia MarquesJúlia MarquesJúlia MarquesJúlia Marques
