--- a/fundamentos/bloco-03/dia-3.2/index.html
+++ b/fundamentos/bloco-03/dia-3.2/index.html
@@ -5,6 +5,7 @@
         <title>CSS Básico</title>
         <style>
             h1{
+            font-family: sans-serif;
             font-size: 65px;   
             color: orange;
             }
@@ -17,6 +18,15 @@
                 background-color: red;
             }
             
+            p{
+                font-weight: 600;
+            }
+
+            body{
+                font-size: 16px;
+            }
+            
+
             </style>
 </head>
 <body>
