fonte-size p 3x body

--- a/fundamentos/bloco-03/dia-3.2/index.html
+++ b/fundamentos/bloco-03/dia-3.2/index.html
@@ -20,6 +20,7 @@
             
             p{
                 font-weight: 600;
+                font-size: 3em;
             }
 
             body{
