--- a/fundamentos/bloco-03/dia-3.2/index.html
+++ b/fundamentos/bloco-03/dia-3.2/index.html
@@ -12,10 +12,14 @@
 
             ul{
                 background-color: aquamarine;
+                line-height: 40px;
+                font-size: 20px;
             }  
 
             .cor-fundo{
                 background-color: red;
+                font-style: italic;
+                text-align: center;
             }
             
             p{
@@ -27,6 +31,17 @@
                 font-size: 16px;
             }
             
+            #vermelho {
+                text-decoration: line-through
+            }
+
+            #amarelo {
+                text-decoration: underline;
+            }
+
+            #marrom{
+                text-decoration: overline;
+            }
 
             </style>
 </head>
@@ -34,9 +49,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="cor-fundo">Qual é a sua cor favorita?</p>
     <ul class="cor-fundo">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>       
+        <li id="amarelo">Amarelo</li>
+        <li id="vermelho">Vermelho</li>
+        <li id="marrom">Marrom</li>       
     </ul>
 </body>
 </html>
