background-color ul

--- a/fundamentos/bloco-03/dia-3.2/index.html
+++ b/fundamentos/bloco-03/dia-3.2/index.html
@@ -17,7 +17,7 @@
             }  
 
             .cor-fundo{
-                background-color: red;
+                background-color: aquamarine;
                 font-style: italic;
                 text-align: center;
             }
@@ -32,15 +32,18 @@
             }
             
             #vermelho {
-                text-decoration: line-through
+                text-decoration: line-through;
+                background-color: red;
             }
 
             #amarelo {
                 text-decoration: underline;
+                background-color: yellow;
             }
 
             #marrom{
                 text-decoration: overline;
+                background-color: brown;
             }
 
             </style>
