--- a/fundamentos/bloco-03/dia-3.2/index.html
+++ b/fundamentos/bloco-03/dia-3.2/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
         <title>CSS Básico</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <style>
-            h1{
+            /* h1{
             font-family: sans-serif;
             font-size: 65px;   
             color: orange;
@@ -44,7 +45,7 @@
             #marrom{
                 text-decoration: overline;
                 background-color: brown;
-            }
+            } */
 
             </style>
 </head>
