--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-I/index.html
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-I/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+        <li>Mairo Vergara</li>
+        <li>Oxford Learners Dictionaries</li>
+        <li>O Antagonista</li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
 </body>
 </html>
