--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-I/index.html
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-I/index.html
@@ -14,5 +14,10 @@
         <li>O Antagonista</li>
     </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>Sites com ótimos conteúdos gratuitos</li>
+        <li>Sites com maravilhosos conteúdos pagos</li>
+        <li>Sites com navegação simples</li>
+    </ul>
 </body>
 </html>
