--- a/fundamentos/bloco-03/dia-3.4/index.html
+++ b/fundamentos/bloco-03/dia-3.4/index.html
@@ -17,7 +17,7 @@
     </header>
     <article>
         <h2>Fatos sobre o Stomatopoda</h2>
-        <img src="http://3.bp.blogspot.com/-COZQp9ckPCk/VA8arrjIBxI/AAAAAAAAB9U/Z6l1ZOtgsio/s1600/tamarutaca%2B1.jpg" 
+        <img class="first-image" src="http://3.bp.blogspot.com/-COZQp9ckPCk/VA8arrjIBxI/AAAAAAAAB9U/Z6l1ZOtgsio/s1600/tamarutaca%2B1.jpg" 
         alt="Stomatopoda: o Camarão Mantis">
         <ol>
         <li>É um perfurador e esmagador.</li>
