Adiciona atualização em 08/03.

--- a/fundamentos/bloco-03/dia-3.4/index.html
+++ b/fundamentos/bloco-03/dia-3.4/index.html
@@ -44,27 +44,28 @@
         </section>
       </div>
       <br>
-      <section>
+      <section id="fatos1">
           <h2>Fatos Interessantes 1</h2>
-          <img src="" alt="">
-          <p>fato fato fato Destaque características impressionantes referentes ao fato
-              que você escolheu, de forma a reforçar a unicidade do Stomatopoda</p>
+          <img src="https://media.istockphoto.com/photos/stomatopoda-or-tamarutaca-scientific-name-of-mantis-shrimp-picture-id1151869813?s=612x612" width="300px" alt="Stomatopoda">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
       <section>
           <h2>Fato Intessante 2</h2>
-          <img src="" alt="">
-          <p>fato fato fato se você criar uma seção detalhando o soco potente do animal, seria 
-              interessante destacar a velocidade desse soco (80km/h) em negrito.</p>
+          <img src="https://image.shutterstock.com/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-600w-753437620.jpg" width="300px" alt="Stomatopoda">
+          <p>fLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
       <section>
           <h2>Fato interessante 3</h2>
-          <img src="" alt="">
-          <p>fato fato fato</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg" width="300px" alt="Stomatopoda">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
       <blockquote>
           <h2>Referências</h2>
           <a href="https://pt.wikipedia.org/wiki/Stomatopoda">https://pt.wikipedia.org/wiki/Stomatopoda</a>
-      </blockquote>
+          <a href="aedu.com.br/infantil?fuzzy=0&map=category-1,categoria,idade&operator=and&order=OrderByReleaseDateDESC&page=3&query=/vestuario/infantil/meninos-4-a-8-anos">aedu.com.br/infantil?fuzzy=0&map=category-1,categoria,idade&operator=and&order=OrderByReleaseDateDESC&page=3&query=/vestuario/infantil/meninos-4-a-8-anos</a>
+          <a href="https://www.shutterstock.com/pt/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-shrimp-753437620">https://www.shutterstock.com/pt/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-shrimp-753437620</a>
+          <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg">https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg</a>
+          </blockquote>
       <footer>
         "Conteúdo compilado por Fernanda Vidal de Jesus, 2022".
       </footer>
