Adiciona exercício parte II conteudo.

--- a/fundamentos/bloco-05/dia-5.2/index.html
+++ b/fundamentos/bloco-05/dia-5.2/index.html
@@ -19,6 +19,6 @@
         <section id="quartoEUltimoFilho"></section>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="scripts2.js"></script>
 </body>
 </html>
