--- a/fundamentos/bloco-05/dia-5.2/exercicios/index.html
+++ b/fundamentos/bloco-05/dia-5.2/exercicios/index.html
@@ -1,63 +1,91 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Exercício 5.2</title>
     <style>
-      section {
-        border-color: black;
-        border-style: solid;
-      }
+        section {
+            border-color: black;
+            border-style: solid;
+        }
 
-      .title {
-        text-align: center;
-      }
+        .title {
+            text-align: center;
+        }
 
-      .main-content {
-        background-color: yellow;
-      }
+        .main-content {
+            background-color: yellow;
+        }
 
-      .main-content .center-content {
-        background-color: red;
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-      }
+        .main-content .center-content {
+            background-color: red;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
-      .main-content .center-content p {
-        font-style: italic;
-      }
+        .main-content .center-content p {
+            font-style: italic;
+        }
 
-      .main-content .left-content {
-        background-color: green;
-        width: 60%;
-        margin-left: 0;
-        margin-right: auto;
-      }
+        .main-content .left-content {
+            background-color: green;
+            width: 60%;
+            margin-left: 0;
+            margin-right: auto;
+        }
 
-      .main-content .left-content .small-image {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 100%;
-      }
+        .main-content .left-content .small-image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            border-radius: 100%;
+        }
 
-      .main-content .right-content {
-        background-color: blue;
-        width: 60%;
-        margin-left: auto;
-        margin-right: 0;
-      }
+        .main-content .right-content {
+            background-color: blue;
+            width: 60%;
+            margin-left: auto;
+            margin-right: 0;
+        }
 
-      .main-content .description {
-        text-align: center;
-      }
+        .main-content .description {
+            text-align: center;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <script>
-      // COLOQUE SEU CÓDIGO AQUI
+        // Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body;
+        let selecionaBody = document.getElementsByTagName('body')[0];
+        function criaFilho(elemento){
+            let cria = document.createElement(elemento);
+            cria.innerText = "Exercício 5.2 - JavaScript DOM";
+            selecionaBody.append(cria);
+        }
+        criaFilho("h1");
+
+        // Adicione a tag main com a classe main-content como filho da tag body;
+    function adicionaPrincipal(seletor, elemento, classes){
+        let cria1 = document.createElement(elemento);
+        cria1.classList = classes;
+       seletor.append(cria1);
+    }
+    adicionaPrincipal(selecionaBody, 'main', 'main-content');
+
+    // Adicione a tag section com a classe center-content como filho da tag main 
+    // criada no passo 2;
+    let selecionaMain = document.getElementsByTagName('main')[0];
+    adicionaPrincipal(selecionaMain, 'section', 'center-content');
+
+    // Adicione a tag section com a classe center-content como filho da tag main criada no 
+    // passo 2;
+
+
     </script>
-  </body>
+</body>
+
 </html>
