--- a/fundamentos/bloco-03/dia-3.4/index.html
+++ b/fundamentos/bloco-03/dia-3.4/index.html
@@ -7,65 +7,73 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <header>
+
+      <header id="header" class="container">
           <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
           <nav>
-              <a href="">Página Inicial</a>
-              <a href="">Sobre</a>
-              <a href="">Contato</a>
+              <a class="nav" href="#header">Página Inicial</a>
+              <a class="nav" href="#fatos">Sobre</a>
+              <a class="nav" href="https://br.linkedin.com/?trk=BR-SEM_google-adwords_Jordan-brand-sign-up&mcid=6821526239111716925&trk2=ga_campid=12619604099_asid=122510712920_crid=509739556238_kw=linkedin%20site_d=c_tid=kwd-327301955753_n=g_mt=e_geo=1001773_slid=&gclid=CjwKCAjwloCSBhAeEiwA3hVo_ZWv0zjzNYMGMvGcD78yErBXaDb4O7R5zVkvFFyJd36j5K11F8i48hoCO-QQAvD_BwE&gclsrc=aw.ds" target="_blank">Contato</a>
           </nav>
       </header>
+
       <div>
-          <article class="artigo"> 
+          <article class="artigo container"> 
               <h2>Fatos sobre o Stomatopoda</h2>
-              <p>Super força.</p>
-              <p>Um dos animais mais velozes do planeta.</p>
-              <p>Super visão.</p>
+              <p >Super força.</p>
+              <p >Um dos animais mais velozes do planeta.</p>
+              <p >Super visão.</p>
           </article>
-          <section class="tabela">
-          <h2>Título a meu critério</h2>
-          <p>Nome científico: <i>Odontodactylus scyllarus</i></p>
+
+          <section class="tabela container">
+          <h2 id="fatos" >Título a meu critério</h2>
+          <p class="table">Nome científico: <i>Odontodactylus scyllarus</i></p>
           <table>
               <tr>
-              <th>Reino</th>
-              <th>Filo</th>
-              <th>Subfilo</th>
-              <th>Classe</th>
+              <th class="coluna">Reino</th>
+              <th class="coluna" >Filo</th>
+              <th class="coluna">Subfilo</th>
+              <th class="coluna">Classe</th>
               <th>Ordem</th>
             </tr>
             <tr>
-                <td>Animalia</td>
-                <td>Arthropoda</td>
-                <td>Crustacea</td>
-                <td>Malacostraca</td>
+                <td class="coluna">Animalia</td>
+                <td class="coluna">Arthropoda</td>
+                <td class="coluna">Crustacea</td>
+                <td class="coluna">Malacostraca</td>
                 <td>Stomatopoda</td>
             </tr>
           </table>
         </section>
+
       </div>
-      <br>
-      <section id="fatos1">
+      <section class="container">
           <h2>Fatos Interessantes 1</h2>
-          <img src="https://media.istockphoto.com/photos/stomatopoda-or-tamarutaca-scientific-name-of-mantis-shrimp-picture-id1151869813?s=612x612" width="300px" alt="Stomatopoda">
+          <img class="img" src="https://media.istockphoto.com/photos/stomatopoda-or-tamarutaca-scientific-name-of-mantis-shrimp-picture-id1151869813?s=612x612" width="300px" alt="Stomatopoda">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
-      <section>
+
+      <section class="container">
           <h2>Fato Intessante 2</h2>
-          <img src="https://image.shutterstock.com/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-600w-753437620.jpg" width="300px" alt="Stomatopoda">
+          <img class="img" src="https://image.shutterstock.com/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-600w-753437620.jpg" width="300px" alt="Stomatopoda">
           <p>fLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
-      <section>
+
+      <section class="container">
           <h2>Fato interessante 3</h2>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg" width="300px" alt="Stomatopoda">
+          <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg" width="300px" alt="Stomatopoda">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
-      <blockquote>
+
+      <blockquote class="container referencias">
           <h2>Referências</h2>
-          <a href="https://pt.wikipedia.org/wiki/Stomatopoda">https://pt.wikipedia.org/wiki/Stomatopoda</a>
-          <a href="aedu.com.br/infantil?fuzzy=0&map=category-1,categoria,idade&operator=and&order=OrderByReleaseDateDESC&page=3&query=/vestuario/infantil/meninos-4-a-8-anos">aedu.com.br/infantil?fuzzy=0&map=category-1,categoria,idade&operator=and&order=OrderByReleaseDateDESC&page=3&query=/vestuario/infantil/meninos-4-a-8-anos</a>
-          <a href="https://www.shutterstock.com/pt/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-shrimp-753437620">https://www.shutterstock.com/pt/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-shrimp-753437620</a>
-          <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg">https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg</a>
-          </blockquote>
+          <ul>
+          <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">https://pt.wikipedia.org/wiki/Stomatopoda</a></li>
+          <li><a href="aedu.com.br/infantil?fuzzy=0&map=category-1,categoria,idade&operator=and&order=OrderByReleaseDateDESC&page=3&query=/vestuario/infantil/meninos-4-a-8-anos">aedu.com.br/infantil?fuzzy=0&map=category-1,categoria,idade&operator=and&order=OrderByReleaseDateDESC&page=3&query=/vestuario/infantil/meninos-4-a-8-anos</a></li>
+          <li><a href="https://www.shutterstock.com/pt/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-shrimp-753437620">https://www.shutterstock.com/pt/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-shrimp-753437620</a></li>
+          <li><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg">https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg</a></li>
+        </ul>
+      </blockquote>
       <footer>
         "Conteúdo compilado por Fernanda Vidal de Jesus, 2022".
       </footer>
