--- a/fundamentos/bloco-03/dia-3.4/index.html
+++ b/fundamentos/bloco-03/dia-3.4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"></html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
       <header id="header" class="container">
           <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
           <nav>
@@ -16,7 +15,6 @@
               <a class="nav" href="https://br.linkedin.com/?trk=BR-SEM_google-adwords_Jordan-brand-sign-up&mcid=6821526239111716925&trk2=ga_campid=12619604099_asid=122510712920_crid=509739556238_kw=linkedin%20site_d=c_tid=kwd-327301955753_n=g_mt=e_geo=1001773_slid=&gclid=CjwKCAjwloCSBhAeEiwA3hVo_ZWv0zjzNYMGMvGcD78yErBXaDb4O7R5zVkvFFyJd36j5K11F8i48hoCO-QQAvD_BwE&gclsrc=aw.ds" target="_blank">Contato</a>
           </nav>
       </header>
-
       <div>
           <article class="artigo container"> 
               <h2>Fatos sobre o Stomatopoda</h2>
@@ -24,7 +22,7 @@
               <p >Um dos animais mais velozes do planeta.</p>
               <p >Super visão.</p>
           </article>
-
+          
           <section class="tabela container">
           <h2 id="fatos" >Título a meu critério</h2>
           <p class="table">Nome científico: <i>Odontodactylus scyllarus</i></p>
@@ -45,26 +43,22 @@
             </tr>
           </table>
         </section>
-
       </div>
       <section class="container">
           <h2>Fatos Interessantes 1</h2>
           <img class="img" src="https://media.istockphoto.com/photos/stomatopoda-or-tamarutaca-scientific-name-of-mantis-shrimp-picture-id1151869813?s=612x612" width="300px" alt="Stomatopoda">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
-
       <section class="container">
           <h2>Fato Intessante 2</h2>
           <img class="img" src="https://image.shutterstock.com/image-photo/stomatopoda-tamarutaca-scientific-name-mantis-600w-753437620.jpg" width="300px" alt="Stomatopoda">
           <p>fLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
-
       <section class="container">
           <h2>Fato interessante 3</h2>
           <img class="img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Mantis_shrimp_from_front.jpg/250px-Mantis_shrimp_from_front.jpg" width="300px" alt="Stomatopoda">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl nec ex vulputate, vel pharetra orci venenatis. Vestibulum nec diam in lacus ultrices tristique nec sed nunc. Nullam tincidunt, tortor venenatis luctus lacinia, tellus purus laoreet augue, eget maximus tellus dolor non felis. Nulla aliquam nisl dui, pharetra auctor nulla eleifend et. Sed dapibus vitae odio et lacinia. Duis bibendum sem felis, at commodo quam ultrices at. Duis bibendum neque sit amet mauris ullamcorper, et pulvinar magna ullamcorper. Suspendisse euismod nisl ut pharetra vulputate. Duis feugiat metus dolor, eget bibendum nibh pellentesque sed. Donec a porttitor velit. Nunc consequat posuere mi in luctus. Vestibulum semper pellentesque massa, nec condimentum orci efficitur lacinia. Donec rhoncus a justo id convallis. Donec ut consectetur ligula. Phasellus suscipit ex ex, in eleifend est convallis vel.</p>
       </section>
-
       <blockquote class="container referencias">
           <h2>Referências</h2>
           <ul>
