Finaliza bonus de verdade.

--- a/fundamentos/bloco-05/dia-5.3/exercicio/index.html
+++ b/fundamentos/bloco-05/dia-5.3/exercicio/index.html
@@ -37,8 +37,8 @@
         <button id="btn-add">Adicionar</button>
       </div>
       <div class="task-list-container">
-        <ul class="task-list">
-        </ul>
+        <ol class="task-list">
+        </ol>
       </div>
     </section>
     <script src="script.js"></script>
