--- a/fundamentos/bloco-07/dia-7.2/exercicio.html
+++ b/fundamentos/bloco-07/dia-7.2/exercicio.html
@@ -26,7 +26,6 @@
             
     }
 
-
     function sum() {
         try {
         const value1 = document.getElementById('value1').value;
@@ -34,14 +33,17 @@
         verifica(value1, value2);
         const result = parseInt(value1) + parseInt(value2);
         document.getElementById('result').innerHTML = `Resultado: ${result}`;
-        document.getElementById('value1').value = '';
-        document.getElementById('value2').value = '';
+        document.getElementById('result').style.color = 'green';
       } 
       catch (error) {
         document.getElementById('result').innerHTML = error.message;
+        document.getElementById('result').style.color = 'red';
+      }
+      finally {
         document.getElementById('value1').value = '';
         document.getElementById('value2').value = '';
       }
+
     }
     window.onload = () => {
       const button = document.getElementById('button');
